test case for graal