@@ -1,8 +1,6 @@
 #!/bin/sh -x 
 
-JAVA_HOME=/usr/local/java/graalvm mvn -Pgraal clean install 
-#--add-exports=java.base/jdk.internal.module=ALL-UNNAMED
-#target/jslee-js --js.debug=true --js.trace=true --js.username=admin --js.password=admin --js.url=service:jmx:remote+http://172.69.0.6:9990 src/test/js/simple.js
+JAVA_HOME=/usr/local/java/graalvm mvn -Dmaven.test.skip -Pgraal -Prun-native -Djs.debug=true -Djs.trace=true -Djs.username=admin -Djs.password=admin -Djs.host=172.69.0.6 -Djs.script=src/test/js/profiles2.js 
 
 if [ -f "target/jslee-js" ] ; then
   cp target/jslee-js bin
